Update to push website

--- a/index.Rmd
+++ b/index.Rmd
@@ -8,7 +8,7 @@ output:
 
 
 
-My name is Frances Williams, and I am a second year MPH student in Epidemiology at Columbia University Mailman School of Public Health. I have experience in research and program evaluation, and am passionate about using data to improve public health programming while advocating for social justice and health equity. I am particularly interested in reproductive health, domestic violence prevention, and criminal justice reform. 
+My name is Frances Williams, and I am a second year MPH student in Epidemiology at Columbia University Mailman School of Public Health. I have experience in research and program evaluation, and am passionate about using data to improve public health programming while advocating for social justice and health equity. I am particularly interested in reproductive health, domestic violence prevention, and criminal justice reform!
 
 
 
